feat: update figma
feat: update figma

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 Diseñada para ser simple, intuitiva y accesible.
             </p>
             <!-- Aquí le agregamos la clase -->
-            <a href="https://www.figma.com/proto/sGqSlXcY915hKQHwfxG716/Figma?node-id=19-3734&p=f&t=ww7ZQielnoxAnwN1-0&scaling=min-zoom&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=19%3A3734"
+            <a href="https://www.figma.com/proto/5w3Mgz6F3KzoDXQeX93wxn/Mock-Up-Aplicacion-web?node-id=1-62&p=f&t=OSkPIoqoSmDjz0Vo-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=1%3A62"
                target="_blank"
                rel="noopener noreferrer"
                class="btn-ver-app">
