fix: Changed businesses' section to projects' section. feat: Added projects' titles to project section. Added new properties to project section style sheet.

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
 
 <section id="Empresas" class="section empresas">
-    <h2 class="section-title">Estas empresas necesitan tu talento</h2>
+    <h2 class="section-title">Conecta con proyectos reales y personas que marcan la diferencia</h2>
 
     <div class="carousel" aria-label="Empresas que contratan">
         <button class="carousel-btn prev" aria-label="Anterior">‹</button>
@@ -356,22 +356,34 @@
             <ul class="carousel-track" id="carouselTrack">
                 <!-- Cada item es una “tarjeta” -->
                 <li class="carousel-item">
-                    <div class="logo-card"><img src="public/assets/img/emprendimento1.png" alt="BanBif" loading="lazy"></div>
+                    <div class="logo-card"><img src="public/assets/img/emprendimento1.png" alt="BanBif" loading="lazy">
+                        <p>Green Haven</p>
+                    </div>
                 </li>
                 <li class="carousel-item">
-                    <div class="logo-card"><img src="public/assets/img/emprendimento2.png" alt="Verisure" loading="lazy"></div>
+                    <div class="logo-card"><img src="public/assets/img/emprendimento2.png" alt="Verisure" loading="lazy">
+                        <p>Serenity Flow</p>
+                    </div>
                 </li>
                 <li class="carousel-item">
-                    <div class="logo-card"><img src="public/assets/img/emprendimento3.png" alt="Lima Expresa" loading="lazy"></div>
+                    <div class="logo-card"><img src="public/assets/img/emprendimento3.png" alt="Lima Expresa" loading="lazy">
+                        <p>Brew Bliss</p>
+                    </div>
                 </li>
                 <li class="carousel-item">
-                    <div class="logo-card"><img src="public/assets/img/emprendimento4.png" alt="Dechini" loading="lazy"></div>
+                    <div class="logo-card"><img src="public/assets/img/emprendimento4.png" alt="Dechini" loading="lazy">
+                        <p>Sharp Cuts</p>
+                    </div>
                 </li>
                 <li class="carousel-item">
-                    <div class="logo-card"><img src="public/assets/img/emprendimento5.png" alt="Real Plaza" loading="lazy"></div>
+                    <div class="logo-card"><img src="public/assets/img/emprendimento5.png" alt="Real Plaza" loading="lazy">
+                        <p>Polish Perfect</p>
+                    </div>
                 </li>
                 <li class="carousel-item">
-                    <div class="logo-card"><img src="public/assets/img/emprendimento6.png" alt="Backus" loading="lazy"></div>
+                    <div class="logo-card"><img src="public/assets/img/emprendimento6.png" alt="Backus" loading="lazy">
+                        <p>Blossom Bloom</p>
+                    </div>
                 </li>
             </ul>
         </div>
