--- a/public/InfoColaborador.html
+++ b/public/InfoColaborador.html
@@ -99,7 +99,7 @@
     <div class="logo">CollabUs</div>
     <div class="top-actions">
       <a class="btn-outline-sm" href="../index.html">Inicio</a>
-      <a class="btn-outline-sm" href="./loginusuario.html">Ingresar</a>
+      <a class="btn-outline-sm" href="">Ingresar</a>
     </div>
   </div>
 </div>
@@ -111,7 +111,7 @@
       <h1>Súmate a proyectos y potencia tu reputación</h1>
       <p>Como <b>Colaborador</b> puedes unirte a iniciativas, demostrar tu talento con evidencias y crecer en el ranking de la comunidad.</p>
       <div class="hero-cta">
-        <a class="btn btn-primary" href="RegistroUser.html">Crear mi perfil</a>
+        <a class="btn btn-primary" href="">Crear mi perfil</a>
         <a class="btn btn-brand" href="#beneficios">Ver beneficios</a>
       </div>
     </div>
@@ -196,11 +196,11 @@
 <!-- CTAs horizontales -->
 <section class="section container">
   <div class="band">
-    <a class="cta-card cta-explorar" href="loginusuario.html">
+    <a class="cta-card cta-explorar" href="">
       <h3>Explorar proyectos disponibles</h3>
       <span class="arrow"-></span>
     </a>
-    <a class="cta-card cta-perfil" href="loginusuario.html">
+    <a class="cta-card cta-perfil" href="">
       <h3>Crear / mejorar mi perfil</h3>
       <span class="arrow">-></span>
     </a>
