--- a/public/InfoEmprendedor.html
+++ b/public/InfoEmprendedor.html
@@ -97,7 +97,7 @@
     <div class="logo">CollabUs</div>
     <div class="top-actions">
       <a class="btn-outline-sm" href="../index.html">Inicio</a>
-      <a class="btn-outline-sm" href="loginusuario.html">Ingresar</a>
+      <a class="btn-outline-sm" href="">Ingresar</a>
     </div>
   </div>
 </div>
@@ -109,7 +109,7 @@
       <h1>Conecta tu idea con talento y financiamiento</h1>
       <p>Como <b>Emprendedor</b> puedes crear un proyecto, sumar colaboradores, publicar evidencias, medir avances y habilitar financiamiento comunitario.</p>
       <div class="hero-cta">
-        <a class="btn btn-primary" href="RegistroUser.html">Crear mi proyecto</a>
+        <a class="btn btn-primary" href="">Crear mi proyecto</a>
         <a class="btn btn-brand" href="#beneficios">Ver beneficios</a>
       </div>
     </div>
@@ -193,11 +193,11 @@
 <!-- Cards horizontales con enlaces -->
 <section class="section container">
   <div class="band">
-    <a class="cta-card cta-empr" href="loginusuario.html">
+    <a class="cta-card cta-empr" href="">
       <h3>Quiero publicar mi proyecto</h3>
       <span class="arrow">-></span>
     </a>
-    <a class="cta-card cta-colab" href="loginusuario.html">
+    <a class="cta-card cta-colab" href="">
       <h3>Busco colaboradores</h3>
       <span class="arrow">-></span>
     </a>
