feat: add link of app web

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <h1>CollabUs</h1>
         <p>Conecta con estudiantes y emprendedores para construir juntos el futuro. Colabora, aprende y crece con nuestra plataforma.</p>
         <div class="hero-buttons">
-            <a href="" class="btn btn-primary">Crear Cuenta</a>
-            <a href="" class="btn btn-outline">Inicio de Sesion</a>
+            <a href="https://collabus-frontend.vercel.app/" class="btn btn-primary">Crear Cuenta</a>
+            <a href="https://collabus-frontend.vercel.app/" class="btn btn-outline">Inicio de Sesion</a>
         </div>
     </div>
     <div class="hero-image">
