--- a/public/InfoEmprendedor.html
+++ b/public/InfoEmprendedor.html
@@ -109,7 +109,7 @@
       <h1>Conecta tu idea con talento y financiamiento</h1>
       <p>Como <b>Emprendedor</b> puedes crear un proyecto, sumar colaboradores, publicar evidencias, medir avances y habilitar financiamiento comunitario.</p>
       <div class="hero-cta">
-        <a class="btn btn-primary" href="">Crear mi proyecto</a>
+        <a class="btn btn-primary" href="https://collabus-frontend.vercel.app/">Crear mi proyecto</a>
         <a class="btn btn-brand" href="#beneficios">Ver beneficios</a>
       </div>
     </div>
@@ -193,11 +193,11 @@
 <!-- Cards horizontales con enlaces -->
 <section class="section container">
   <div class="band">
-    <a class="cta-card cta-empr" href="">
+    <a class="cta-card cta-empr" href="https://collabus-frontend.vercel.app/">
       <h3>Quiero publicar mi proyecto</h3>
       <span class="arrow">-></span>
     </a>
-    <a class="cta-card cta-colab" href="">
+    <a class="cta-card cta-colab" href="https://collabus-frontend.vercel.app/">
       <h3>Busco colaboradores</h3>
       <span class="arrow">-></span>
     </a>
