--- a/index.html
+++ b/index.html
@@ -358,37 +358,37 @@
                 <li class="carousel-item">
                     <div class="logo-card"><img src="public/assets/img/emprendimento1.png" alt="BanBif" loading="lazy">
                         <h5>Green Haven</h5>
-                        <p>Green Haven es un proyecto integral dedicado a transformar espacios urbanos en oasis ecológicos autosuficientes. Nuestra misión es reconectar a las personas con la naturaleza a través de soluciones de agricultura vertical, techos verdes y jardines inteligentes que optimizan el uso del agua y la energía.</p>
+                        <p>Green Haven es un proyecto integral dedicado a transformar espacios urbanos en oasis ecológicos.</p>
                     </div>
                 </li>
                 <li class="carousel-item">
                     <div class="logo-card"><img src="public/assets/img/emprendimento2.png" alt="Verisure" loading="lazy">
                         <h5>Serenity Flow</h5>
-                        <p>Serenity Flow es un espacio holístico donde la meditación, el movimiento consciente y la tecnología se fusionan para guiarte hacia un estado de equilibrio interior. Nuestra plataforma integra prácticas ancestrales con herramientas digitales modernas para crear una experiencia de bienestar personalizada y accesible.</p>
+                        <p>Serenity Flow es un espacio holístico donde la meditación y la tecnología se fusionan.</p>
                     </div>
                 </li>
                 <li class="carousel-item">
                     <div class="logo-card"><img src="public/assets/img/emprendimento3.png" alt="Lima Expresa" loading="lazy">
                         <h5>Brew Bliss</h5>
-                        <p>Brew Bliss es una experiencia sensorial que transforma el ritual del café en un viaje de placer consciente. Seleccionamos los granos más excepcionales de micro-lotes alrededor del mundo y desarrollamos métodos de preparación que realzan sus perfiles únicos, creando momentos de auténtica felicidad en cada taza.</p>
+                        <p>Brew Bliss es una experiencia sensorial que transforma el ritual del café en un viaje de placer consciente. </p>
                     </div>
                 </li>
                 <li class="carousel-item">
                     <div class="logo-card"><img src="public/assets/img/emprendimento4.png" alt="Dechini" loading="lazy">
                         <h5>Sharp Cuts</h5>
-                        <p>Sharp Cuts redefine la experiencia de la barbería moderna, combinando técnicas clásicas con las últimas tendencias en cuidado masculino. Cada corte es una obra de arte meticulosa, ejecutada por barberos expertos que transforman tu look en una declaración de confianza y estilo.</p>
+                        <p>Sharp Cuts redefine la experiencia de la barbería moderna, con las últimas tendencias en cuidado masculino. </p>
                     </div>
                 </li>
                 <li class="carousel-item">
                     <div class="logo-card"><img src="public/assets/img/emprendimento5.png" alt="Real Plaza" loading="lazy">
                         <h5>Polish Perfect</h5>
-                        <p>Polish Perfect es un santuario de belleza especializado en el arte del cuidado y embellecimiento de uñas. Transformamos tus manos y pies en una declaración de estilo mediante técnicas innovadoras, productos de primera calidad y una atención meticulosa al detalle que redefine el concepto de manicura y pedicura premium.</p>
+                        <p>Polish Perfect es un santuario de belleza especializado en el arte del cuidado y embellecimiento de uñas. </p>
                     </div>
                 </li>
                 <li class="carousel-item">
                     <div class="logo-card"><img src="public/assets/img/emprendimento6.png" alt="Backus" loading="lazy">
                         <h5>Blossom Bloom</h5>
-                        <p>Blossom Bloom es una floristería artesanal que transforma la belleza efímera de las flores en momentos eternos de emoción. Especializados en crear arreglos únicos que capturan sentimientos y celebran la vida, convertimos espacios y ocasiones en experiencias memorables llenas de color y fragancia.</p>
+                        <p>Blossom Bloom es una floristería artesanal que transforma la belleza efímera de las flores en momentos eternos de emoción. .</p>
                     </div>
                 </li>
             </ul>
