feat: add video section about the team

--- a/index.html
+++ b/index.html
@@ -415,6 +415,20 @@
     </div>
 </section>
 
+<section id="VideoAboutTeam" class="intro-video-about-team">
+    <h2>Video About-Team</h2>
+    <div class="video-container">
+        <iframe
+                src="https://www.youtube.com/embed/c10NiV8X82A?si=y8LfBLHKcImvOPVH"
+                title="Video About-Team"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+        </iframe>
+    </div>
+</section>
+
+
 <footer id="Contacto" class="site-footer">
     <!-- Contacto -->
     <div class="contact-band">
